# tsne_project

./: Comparisons.ipynb  Examples.ipynb  JIT_optimized.ipynb  LICENSE  Optimization.ipynb  Optimization_messy.ipynb  Project_working_notebook.ipynb  README.md  Report.ipynb  plot_code.ipynb  setup.cfg  setup.py  speed_table.csv  t-SNE.py  testing.ipynb  tsne.prof  tsne.py  tsne_2.py
Data/: breast_cancer_data.npy  breast_cancer_labels.npy  iris.csv  rna_data_sample.csv  rna_labels.csv
Examples/: Examples.ipynb
Report/: Report - Implementation of Visualizing Data Using t-SNE (1).ipynb  Report.ipynb
Report/Report_Plots/: comparison_speed_table.csv  speed_table_final.csv
Testing, Optimization, Comparisons/: Comparisons.ipynb  Optimization.ipynb
src/tsne/: tsne.py
