[metadata]

name = TSNE-reddy-beckner
version = 0.0.2
author = Aasha Reddy, Madeleine Beckner
author_email = aashareddy14@gmail.com
description = Implementation of t-Distributed Stochastic Neighbor Embedding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aashareddy14/tsne_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
